welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value vuBiscuit
if (vuBiscuit() == true ) {
    ^Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
	avance()
              ^Program:13: error: type mismatch;
 found   : Unit
 required: Boolean
	gauche()
              ^